# flake8-no-implicit-str-concat-in-list

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  generate_error_codes_table.py  pyproject.toml  setup.cfg
.github/workflows/: build.yaml
flake8_no_implicit_str_concat_in_list/: __init__.py  _version.py
tests/: __init__.py  test_checker.py
tests/run_flake8/: Run.sh  backslash.py  backslash.py.expected  blanklines.py.expected  bytes.py  bytes.py.expected  comment.py.expected  fstring.py  fstring.py.expected  multiline.py.expected  noerror.py  noerror.py.expected  set.py  set.py.expected  triplequote.py  triplequote.py.expected
