
[options.packages.find]
exclude =
  tests

[coverage:run]
branch = True
omit =
  tests/*
  .venv/*

[coverage:report]
exclude_lines =
  if self.debug:
  pragma: no cover
  raise NotImplementedError
  if __name__ == .__main__.:
ignore_errors = True


[flake8]
#extend-ignore =
#  E203,  # See https://github.com/peterjc/flake8-black#configuration, https://github.com/PyCQA/pycodestyle/issues/373
#  E501,  # line too long
exclude =
  .git,
  __pycache__,
  .venv,
  .mypy_cache,
  docs,
  build,
  tests/run_flake8,


[isort]
# Be happy with black formatter and hacking linter
force_single_line = true
line_length = 88
lines_between_types = 1


[darglint]
docstring_style = sphinx


[mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version = 3.10
platform = linux

# show error messages from unrelated files
follow_imports = normal

# suppress errors about unsatisfied imports
# ignore_missing_imports = True
